feat: progress unit test

--- a/src/app/pages/form-test/form-test.component.scss
+++ b/src/app/pages/form-test/form-test.component.scss
@@ -97,7 +97,7 @@
           }
           > tr > td {
             border-bottom: hidden;
-            font-family: 'Inter';
+            font-family: 'Roboto';
             font-weight: 600;
             line-height: 24px;
             color: #252c32;
