feat: add sonar

--- a/src/app/pages/form-test/form-test.component.html
+++ b/src/app/pages/form-test/form-test.component.html
@@ -33,7 +33,7 @@
       <label for="filter">Filtrar</label>
       <input type="text" name="filter" id="filter" [formControl]="filterField" />
     </div>
-    <table class="form-test__filter__table">
+    <table class="form-test__filter__table" aria-describedby="erick">
       <thead class="form-test__filter__table__header">
         <tr>
           <th>ID</th>
